# datamole

./: .gitignore  Contributing.md  README.md  TODO.md  datamole_specification.md  pyproject.toml
.github/: BRANCHING_STRATEGY.md
.github/workflows/: ci.yml  dev-release.yml  release.yml
datamole/: __init__.py  cli.py  config.py  core.py  storage.py
datamole/config/: __init__.py  global_config.py  project.py
scripts/: setup-dev.sh
tests/: conftest.py  test_add_version.py  test_cli_entry_point.py  test_config.py  test_datamole.py  test_global_config.py  test_integration.py  test_pull.py  test_storage.py
