[project]
name = "datamole"
dynamic = ["version"]
description = "Dataset versioning and management for ML projects."
authors = [{name = "Anshuman Narayan", email = "anshu.nryn@gmail.com"}]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
keywords = ["data", "versioning", "ml", "datasets", "dvc-alternative"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/anshumandec94/datamole"
Repository = "https://github.com/anshumandec94/datamole"
Issues = "https://github.com/anshumandec94/datamole/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "tomli>=2.0; python_version < '3.11'",
]

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["datamole*"]

[tool.setuptools_scm]
write_to = "datamole/_version.py"
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"

[project.scripts]
dtm = "datamole.cli:main"
